Fix issues with main menu and gap on the top

--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,8 @@ body{
   padding-top: 9px;
   padding-bottom: 9px;
 }
-.navbar-nav>li.border-on-hover>a:hover{
+.navbar-nav>li.border-on-hover>a:hover,
+.navbar-nav>li.border-on-hover:hover>a{
   padding-top: 8px;
   padding-bottom: 8px;
 }
